x-dialog: fix blurry caused by class weui-dialog (#2634)
* fix blurry caused by class weui-dialog

* 修复过渡动画和alart高度不正确问题

--- a/src/styles/transition.less
+++ b/src/styles/transition.less
@@ -2,29 +2,35 @@
   opacity: 1;
   transition: opacity linear 0.2s;
 }
-
 .vux-fade-enter, .vux-fade-leave-to {
   opacity: 0;
 }
-
-.vux-dialog-enter-active, .vux-dialog-leave-active {
-  opacity: 1;
-  transition-duration: 400ms;
-  transform: translate(-50%, -50%) scale(1)!important;
-  transition-property: transform, opacity!important;
+.vux-dialog-enter-active {
+  animation: vux-dialog-in .5s;
 }
 .vux-dialog-leave-active {
-  transition-duration: 300ms;
+  animation: vux-dialog-out .3s;
 }
-.vux-dialog-enter {
-  opacity: 0;
-  transform: translate(-50%, -50%) scale(1.185)!important;
+@keyframes vux-dialog-in {
+  0% {
+    transform: scale(1.185);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
-.vux-dialog-leave-active {
-  opacity: 0;
-  transform: translate(-50%, -50%) scale(0.85)!important;
+@keyframes vux-dialog-out {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.85);
+    opacity: 0;
+  }
 }
-
 .vux-mask-enter, .vux-mask-leave-active {
   opacity: 0;
 }
